# aoc2023

./: .gitignore  CMakeLists.txt  aoc.sh  build.sh  day1.cpp  day2.cpp  dbg.sh  flake.nix  readme.md  rel.sh  utils.hpp
include/: utils.hpp
src/: bench_day4.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
